<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentDescription="@string/scroll">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">



        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="707dp"
            android:background="@drawable/back"
            android:contentDescription="@string/background_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </ImageView>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="206dp"
            android:layout_height="54dp"
            android:layout_marginStart="84dp"
            android:layout_marginTop="307dp"
            android:background="@drawable/logo"
            android:contentDescription="@string/logo_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="139dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="232dp"
            android:background="@drawable/social"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            android:contentDescription="@string/social_comment" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@color/backgroundcolor"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="1.0">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBtn"
                android:layout_width="167dp"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_style_wt"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/log_in"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:layout_editor_absoluteX="132dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/regBtn"
                android:layout_width="167dp"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_style_blk"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/register"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:layout_editor_absoluteX="132dp" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>



